[package]
name = "bullet_hell"
version = "0.2.0"
edition = "2024"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
rand = "0.9.0"

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    # Selected default features:
    # https://docs.rs/bevy/0.15.3/bevy/#default-features
    "multi_threaded",
    "bevy_asset",
    "bevy_winit",
    "bevy_sprite",
    "bevy_ui",

    # Optional features:
    # https://docs.rs/bevy/0.15.3/bevy/#optional-features
    "dynamic_linking",
]

[profile.release]
lto = true      # link time optimizations
opt-level = "s"

[profile.dev]
opt-level = 1

# Dependencies, including Bevy
[profile.dev.package."*"]
opt-level = 3
