[package]
name = "bullet_hell"
version = "0.3.0"
edition = "2024"

[lints.clippy]
all = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
rand = "0.9.2"
bevy_enhanced_input = "0.20.0"

[dependencies.avian2d]
version = "0.4.1"
default-features = false
features = ["2d", "parry-f32", "parallel", "simd"]

[dependencies.bevy]
version = "0.17.3"
default-features = true
features = [
    # https://docs.rs/crate/bevy/latest/features

    # Selected default features:
    # "multi_threaded",
    # "bevy_asset",
    # "bevy_winit",
    # "bevy_sprite",
    # "bevy_ui",
    # "default_font",
    # "wayland", # install libwayland-dev pkg-config

    # Optional features:
    "dynamic_linking",
]

[profile.release]
lto = true      # link time optimizations
opt-level = "s"

[profile.dev]
opt-level = 0

# Dependencies, including Bevy
[profile.dev.package."*"]
opt-level = 3
