[package]
name = "bullet_hell"
version = "0.3.0"
edition = "2024"

[lints.clippy]
all = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }

[dependencies]
rand = "0.9.2"
bevy_enhanced_input = "0.20.0"

[dependencies.avian2d]
version = "0.4.1"
default-features = false
features = ["2d", "parry-f32", "parallel", "simd"]

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    # https://docs.rs/bevy/latest/bevy/
    "bevy_core_pipeline",

    "bevy_winit",

    "bevy_sprite",
    "bevy_sprite_render",

    "bevy_ui",
    "bevy_ui_render",

    "multi_threaded",

    "dynamic_linking",
]

[profile.release]
lto = true
opt-level = "s"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
